[gd_scene load_steps=9 format=2]

[ext_resource path="res://TacticalSpaceCombat/Ship/ShipAI.tscn" type="PackedScene" id=1]
[ext_resource path="res://TacticalSpaceCombat/Ship/ShipPlayer.tscn" type="PackedScene" id=2]
[ext_resource path="res://TacticalSpaceCombat/Assets/Theme.tres" type="Theme" id=3]
[ext_resource path="res://TacticalSpaceCombat/UI/UISystem.tscn" type="PackedScene" id=4]
[ext_resource path="res://TacticalSpaceCombat.gd" type="Script" id=5]
[ext_resource path="res://TacticalSpaceCombat/Assets/Font/MontserratExtraBold24.tres" type="DynamicFont" id=6]
[ext_resource path="res://TacticalSpaceCombat/Assets/Background.png" type="Texture" id=7]

[sub_resource type="Environment" id=1]
background_mode = 4
glow_enabled = true
glow_levels/1 = true
glow_levels/2 = true
glow_levels/5 = false

[node name="TacticalSpaceCombat" type="Node2D"]
script = ExtResource( 5 )

[node name="Background" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.588235 )
texture = ExtResource( 7 )
centered = false

[node name="ShipPlayer" parent="." instance=ExtResource( 2 )]
position = Vector2( 256, 384 )

[node name="ViewportContainer" type="ViewportContainer" parent="."]
margin_left = 1024.0
margin_top = 128.0
margin_right = 1792.0
margin_bottom = 960.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="ViewportContainer"]
size = Vector2( 768, 832 )
handle_input_locally = false
render_target_update_mode = 3
physics_object_picking = true

[node name="Background" type="Sprite" parent="ViewportContainer/Viewport"]
modulate = Color( 1, 0.709804, 0.709804, 1 )
position = Vector2( -1000, 0 )
texture = ExtResource( 7 )
centered = false

[node name="ShipAI" parent="ViewportContainer/Viewport" instance=ExtResource( 1 )]
position = Vector2( 192, 288 )

[node name="UI" type="Control" parent="ViewportContainer/Viewport"]
margin_right = 40.0
margin_bottom = 40.0

[node name="HitPoints" type="Label" parent="ViewportContainer/Viewport/UI"]
margin_right = 40.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 6 )
text = "HP: 100"

[node name="UI" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Units" type="VBoxContainer" parent="UI"]
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Systems" type="HBoxContainer" parent="UI"]
margin_top = 1008.0
margin_right = 32.0
margin_bottom = 1040.0
rect_min_size = Vector2( 0, 72 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Doors" parent="UI/Systems" instance=ExtResource( 4 )]
text = "D"

[node name="HitPoints" type="Label" parent="UI"]
margin_left = 64.0
margin_right = 194.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 6 )
text = "HP: 100"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )
